# ApngDrawable

./: settings.gradle
apngdrawable/: build.gradle
apngdrawable/src/main/cpp/: CMakeLists.txt
apngdrawable/src/main/cpp/decode/: ACTLChunk.cpp  APNGDecoder.cpp  APNGFrame.cpp  APNGParser.cpp  Chunk.cpp  FCTLChunk.cpp  FDATChunk.cpp  IDATChunk.cpp  IENDChunk.cpp  IHDRChunk.cpp  StillFrame.cpp
apngdrawable/src/main/cpp/include/: Crc32.h  Log.h
apngdrawable/src/main/cpp/include/decode/: ACTLChunk.h  APNGDecoder.h  APNGFrame.h  APNGParser.h  Chunk.h  FCTLChunk.h  FDATChunk.h  IDATChunk.h  IENDChunk.h  IHDRChunk.h  StillFrame.h
apngdrawable/src/main/cpp/include/io/: ApngReader.h  ApngWriter.h  AssetReader.h  Reader.h  Writer.h
apngdrawable/src/main/cpp/include/thread/: Common.hpp
apngdrawable/src/main/cpp/io/: ApngReader.cpp  ApngWriter.cpp  AssetReader.cpp
apngdrawable/src/main/cpp/jni/: com_justin_apngdrawable_ApngDrawable.cpp  nativehelper_utils.h  scoped_primitive_array.h  scoped_string_chars.h  scoped_utf_chars.h
apngdrawable/src/main/cpp/thread/: Thread.cpp  ThreadPool.cpp
apngdrawable/src/main/java/com/justin/apngdrawable/: ApngDrawable.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
buildSrc/: .gitignore  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
